# Lexi

./: .gitignore  CODE_WIKI.md  CONTRIBUTING.md  ISSUE_REPORT.md  LICENSE  README.md  README_ZH.md
.grill/: lexi-ime-design.md
docs/: CODE_WIKI.md  ISSUE_REPORT.md
scripts/: register-tsf.ps1  unregister-tsf.ps1
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/tsf-service/: Cargo.toml
src-tauri/crates/tsf-service/src/: lib.rs  pipe_client.rs  text_service.rs
src-tauri/src/: candidate_bar.rs  lib.rs  logging.rs  main.rs  pipe_server.rs
src-tauri/src/ime/rime/: ffi.rs  mod.rs
src/css/: settings.css
src/js/: settings.js
