[workspace]
members = ["crates/tsf-service"]

[package]
name = "lexi"
version = "0.1.0"
description = "Lexi 输入法"
authors = ["you"]
edition = "2021"

[lib]
name = "lexi_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
dirs = "5"
raw-window-handle = "0.6"
image = { version = "0.25", default-features = false, features = ["png"] }
skia-safe = { version = "0.93", features = ["textlayout"] }
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Pipes",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_Security",
    "Win32_UI_WindowsAndMessaging",
] }
