[package]
name = "lexi-tsf"
version = "0.1.0"
description = "Lexi input method TSF text service"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
windows-core = "0.58"
windows = { version = "0.58", features = [
    "Win32_UI_TextServices",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_IO",
    "Win32_System_Memory",
    "Win32_System_Pipes",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemServices",
    "Win32_Globalization",
    "Win32_Storage_FileSystem",
    "implement",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
